# vector-database-icp

./: .prettierignore  Cargo.toml  Makefile  README.md  canister_ids.json  canisters_ids.json  dfx.json  manual.md  package-lock.json  package.json  rust-toolchain.toml  vector_database_backend.wasm  vitest.config.ts
.github/workflow/: integration-test.yml
.github/workflows/: integration-test.yml
keys/: comp1.seed  comp2.seed  manager.seed  owner.seed  user.seed
scripts/: generate-did.sh  integration.test.sh  redeploy.sh
src/vector_database_backend/: Cargo.toml  vector_database_backend.did
src/vector_database_backend/src/: config.rs  lib.rs  management.rs
src/vector_database_backend/src/company/: comp.rs  mod.rs
src/vector_database_backend/src/database/: db.rs  index.rs  mod.rs  test.rs
src/vector_database_backend/src/message/: msg.rs
src/vector_database_backend/src/migration/: migration.rs
src/vector_database_backend/src/openai/: chat_completion.rs  common.rs  mod.rs
src/vector_database_backend/src/sms/: vector_database_backend.wasm
tests/: integration.test.ts
tests/unit/: query.sh
