[package]
name = "vector_database_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.10"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.5.6"
instant-distance = { git = "https://github.com/bianyuanop/instant-distance", version = "0.6.1"}
nalgebra = {version = "0.32.3", default-features = false, features = ["libm", "alloc"]}
getrandom = { version = "0.2", features = ["js"]}

# [dev-dependencies]
# rand = "0.8.5"
